--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "require": {
         "mongofill/mongofill": "dev-master"
+    },
+    "autoload": {
+      "psr-4": {"EPSI\\": "utilities/"}
     }
 }
-
